--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "cd web && npm install && npm run build",
+  "buildCommand": "cd web && npm run build",
   "devCommand": "cd web && npm run dev",
   "installCommand": "cd web && npm install",
-  "framework": null,
   "outputDirectory": "web/.next"
 }
