CRITICAL FIX: Remove invalid -m flag from git pull command
ERROR: 'error: unknown switch `m`'

Root cause:
- Line 145 had: git pull ... -m "Merge remote changes..."
- -m flag is ONLY valid for 'git commit', NOT 'git pull'
- This caused all scheduled runs to fail with syntax error
- Manual runs worked because they didn't use this command

Fix:
- Removed invalid -m flag
- --no-edit already handles automatic merge commit message
- Git will use default merge message: 'Merge branch main of ...'

This was the actual bug causing scheduled failures.
Tested syntax is now correct.

--- a/.github/workflows/daily-predictions-advanced.yml
+++ b/.github/workflows/daily-predictions-advanced.yml
@@ -141,8 +141,8 @@ jobs:
 
               # Pull with merge strategy (not rebase) to auto-resolve conflicts
               # -X ours: In case of conflict, prefer our (workflow's) changes
-              # --no-edit: Don't open editor for merge commit message
-              if git pull --no-rebase origin main -X ours --no-edit -m "Merge remote changes into automated update"; then
+              # --no-edit: Don't open editor for merge commit message (uses default message)
+              if git pull --no-rebase origin main -X ours --no-edit; then
                 echo "✓ Merge successful"
 
                 # Try push again after merge
