FIX RACE CONDITION: Disable duplicate workflows
ROOT CAUSE FOUND:
- 4 workflows scheduled at EXACTLY same time (10 PM IST)
- All try to push simultaneously → race condition
- One succeeds, others fail → explains scheduled failures
- Manual triggers succeed because only 1 workflow runs

SOLUTION:
Disabled scheduled runs for 3 redundant workflows:
✗ daily-predictions.yml (old FinBERT)
✗ daily-predictions-finbert.yml (duplicate FinBERT)
✗ daily-predictions-vader-backup.yml (old VADER)

✓ daily-predictions-advanced.yml (KEEP - V5 Advanced 196 features)

Now only 1 workflow runs at 10 PM IST → no race condition!
Manual triggers still work for all workflows.

--- a/.github/workflows/daily-predictions-vader-backup.yml
+++ b/.github/workflows/daily-predictions-vader-backup.yml
@@ -1,11 +1,11 @@
 name: Daily Stock Predictions
 
 on:
-  # Schedule: Run daily at 10 PM IST (4:30 PM UTC)
-  schedule:
-    - cron: '30 16 * * *'  # 4:30 PM UTC = 10:00 PM IST
+  # DISABLED: Old VADER backup, replaced by daily-predictions-advanced.yml
+  # schedule:
+  #   - cron: '30 16 * * *'  # 4:30 PM UTC = 10:00 PM IST
 
-  # Allow manual triggering
+  # Allow manual triggering only
   workflow_dispatch:
 
 permissions:
